--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
 	<title>String converter</title>
 
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='build/bundle.css'>
 
