--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<meta name="description" content="Convert a string to Camel case, Pascal case, Snake case or Kebab case">
 
 	<title>String converter</title>
 
